ajustes no fluxo de segurança