@@ -1,11 +1,17 @@
 package br.com.devspraticar.gestaousuario.security;
 
 import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.JwtException;
+import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.MalformedJwtException;
 import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.security.Keys;
+import io.jsonwebtoken.security.SignatureException;
+import jakarta.annotation.PostConstruct;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -15,10 +21,11 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
+import javax.crypto.SecretKey;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class JwtTokenProvider {
@@ -26,14 +33,22 @@ public class JwtTokenProvider {
     @Value("${security.jwt.secret}")
     private String jwtSecret;
 
+    @Getter
     @Value("${security.jwt.expirationMS}")
     private long jwtExpirationMs;
+
+    private SecretKey secretKey;
+
+    @PostConstruct
+    public void init() {
+        this.secretKey = Keys.hmacShaKeyFor(jwtSecret.getBytes());
+    }
 
     public String generateToken(Authentication authentication) {
         UserSecurity userPrincipal = (UserSecurity) authentication.getPrincipal();
         List<String> roles = userPrincipal.getAuthorities().stream()
             .map(GrantedAuthority::getAuthority)
-            .collect(Collectors.toList());
+            .toList();
 
         Date now = new Date();
         Date expiry = new Date(now.getTime() + jwtExpirationMs);
@@ -44,25 +59,34 @@ public class JwtTokenProvider {
             .claim("ID", userPrincipal.getUser().getId())
             .setIssuedAt(now)
             .setExpiration(expiry)
-            .signWith(Keys.hmacShaKeyFor(jwtSecret.getBytes()), SignatureAlgorithm.HS512)
+            .signWith(secretKey, SignatureAlgorithm.HS512)
             .compact();
     }
 
     public boolean validateToken(String token) {
         try {
             Jwts.parserBuilder()
-                .setSigningKey(jwtSecret.getBytes())
+                .setSigningKey(secretKey)
                 .build()
                 .parseClaimsJws(token);
             return true;
-        } catch (JwtException e) {
-            return false;
+        } catch (ExpiredJwtException e) {
+            log.warn("Token expirado", e);
+        } catch (UnsupportedJwtException e) {
+            log.warn("Token não suportado", e);
+        } catch (MalformedJwtException e) {
+            log.warn("Token inválido", e);
+        } catch (SignatureException e) {
+            log.warn("Assinatura inválida", e);
+        } catch (IllegalArgumentException e) {
+            log.warn("Token vazio", e);
         }
+        return false;
     }
 
     public Authentication getAuthentication(String token) {
         Claims claims = Jwts.parserBuilder()
-                .setSigningKey(jwtSecret.getBytes())
+                .setSigningKey(secretKey)
                 .build()
                 .parseClaimsJws(token)
                 .getBody();
@@ -71,11 +95,10 @@ public class JwtTokenProvider {
         List<String> roles = claims.get("roles", List.class);
 
         List<SimpleGrantedAuthority> authorities = roles.stream()
-            .map(SimpleGrantedAuthority::new)
-            .toList();
+                .map(SimpleGrantedAuthority::new)
+                .toList();
 
         UserDetails userDetails = new User(username, "", authorities);
         return new UsernamePasswordAuthenticationToken(userDetails, token, authorities);
     }
-
 }
